# aoc

./: .gitignore  pyproject.toml
01/: main.py
2022/01/: main.py
2022/02/: main.py
2022/03/: main.py
2022/04/: main.py
2022/05/: main.py
2022/06/: main.py
