[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["prego <pedropregueiro@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target_version = ["py39"]
include = '\.pyi?$'
exclude = '\.git/|\.mypy_cache/|\.venv/|\.pytest_cache/|\.vscode/|__pycache__/'

[tool.isort]
profile = "black"
line_length = 120
known_first_party = "app"
skip = ".git,.mypy_cache,.venv,.pytest_cache,.vscode,__pycache__"
